# week3-ml-baseline-system

./: pyproject.toml
data/processd/data/processed1/: sample_data.csv
reports/: model_card.md
src/ml_baseline/: cli.py  genrate_sample_data.py
src/ml_model/: cli.py  genrate_sample_data.py
